# x4-diagrams

./: .gitignore  Justfile  README.md  production.json  production.py  pyproject.toml
docs/: argon_food_drugs_graph.dot  argon_food_drugs_sankey.html  boron_food_drugs_graph.dot  boron_food_drugs_sankey.html  commonwealth_construction_graph.dot  commonwealth_construction_sankey.html  commonwealth_tier_1_2_food_drugs_sankey.html  consumption-graph.dot  consumption-sankey.html  index.html  paranid_food_drugs_graph.dot  paranid_food_drugs_sankey.html  recycling-graph.dot  recycling-sankey.html  scrap_construction_graph.dot  scrap_construction_sankey.html  scrap_graph.dot  scrap_sankey.html  t1_t2_argon_food_drugs__graph.dot  t1_t2_argon_food_drugs__sankey.html  t1_t2_argon_food_drugs_graph.dot  t1_t2_argon_food_drugs_graph_full.dot  t1_t2_argon_food_drugs_sankey.html  t1_t2_argon_food_drugs_sankey_full.html  t1_t2_argon_food_drugs_sankey_simplified.html  t1_t2_boron_food_drugs__graph.dot  t1_t2_boron_food_drugs__sankey.html  t1_t2_boron_food_drugs_graph.dot  t1_t2_boron_food_drugs_graph_full.dot  t1_t2_boron_food_drugs_sankey.html  t1_t2_boron_food_drugs_sankey_full.html  t1_t2_boron_food_drugs_sankey_simplified.html  t1_t2_commonwealth_food_drugs__graph.dot  t1_t2_commonwealth_food_drugs__sankey.html  t1_t2_commonwealth_food_drugs_graph.dot  t1_t2_commonwealth_food_drugs_sankey.html  t1_t2_commonwealth_food_drugs_simplified_graph.dot  t1_t2_commonwealth_food_drugs_simplified_sankey.html  t1_t2_food_drugs__sankey.html  t1_t2_food_drugs_graph.dot  (+143 more)
docs/graph/: economy-3-refined.dot  economy-4-advanced.dot  (+3 more)
x4/: __init__.py  __main__.py  colours.py  economy.py  factions.py  logs.py  oldeconomy.py  test_economy.py  test_types.py  types.py
x4_data/: __main__.py  economy.py  factions.py  races.py
(+19 files in other folders)
