[tool.poetry]
name = "x4-diagrams"
version = "0.1.0"
description = ""
authors = ["Sam Clements <sam@borntyping.co.uk>"]
readme = "README.md"
packages = [{include = "x4_diagrams"}]

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.1"
plotly = "^5.18.0"
structlog = "^24.1.0"
kaleido = "0.2.1"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"

[tool.black]
line-length = 128

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
